Update Alfresco SDK 1.x development environment setup.md